kitsune/sumo/static/sumo/less/questions.less
@import 'variables.less';
@import 'includes/editor-tools.less';
@import 'includes/search-result.less';
@import 'includes/mixins.less';
@import 'includes/topic-list.less';

h1 {
  font-size: 46px;
  margin-top: 0;
}

h2 {
  font-size: 28px;
}

.product-list {
  a,
  a:visited {
    color: @textGrey;
    display: block;
    min-height: 96px;
  }

  .product {
    background: #fff;
    margin: 0 30px 30px 0;
    padding: 20px 30px;
  }

  .logo-sprite {
    background-position: 50% 50%;
    float: left;
  }

  .title {
    display: block;
    font-family: @OpenSansLight;
    font-size: 22px;
    letter-spacing: -1px;
    line-height: 22px;
    margin: 0 0 12px 99px;
  }

  .description {
    display: block;
    margin: 0 0 0 99px;
  }

  .no-image {
    .title,
    .description {
      margin-left: 0;
    }
  }
}
/* ... */

